# cropstate

./: .gitignore  CropState_Revision_Plan_VI.html  README.md  logfromcolab.txt  pyproject.toml  requirements.txt
KNOWLEDGE_BASE_SAMPLE/: CROPSTATE_KB_Evaluation_Report.docx  CROPSTATE_Sample_Knowledge_Base.xlsx
configs/: knowledge_sources.json  knowledge_sources_irri.json  retrieval.yaml  vision.yaml
data/: image_manifest.csv  image_manifest_excluded.csv  knowledge_chunks.jsonl  retrieval_scenarios.csv  riceseg_stage_manifest.csv  stage_folder_manifest.csv
docs/: ANNOTATION_GUIDELINE.md  COLAB_GITHUB_DRIVE_WORKFLOW.md  IMPLEMENTATION_GUIDE_VI.md  KNOWLEDGE_BASE_WORKFLOW.md  RETRIEVAL_OVERVIEW_VI.md
notebooks/: cropstate_colab_github_drive.ipynb
paper/: CROPSTATE_expanded_positioning.md  Cropstate_compare.md  cropstate_image_paper.tex  cropstate_paper.tex  old_paper.tex  references.bib
results/vision_resnet18/: history.json
scripts/: analyze_retrieval_significance_clustered.py  audit_dataset.py  audit_knowledge_base.py  build_knowledge_base.py  build_sample_manifest.py  build_stage_manifest.py  build_stage_profiles.py  compare_vision_baselines.py  convert_image_manifest.py  convert_knowledge_base.py  crawl_irri_rkb.py  evaluate_retrieval.py  export_predictions.py  predict_image.py  run_retrieval.py  train_vision.py
tests/: test_confidence.py  test_dataset.py  test_evaluate_retrieval_scenarios.py  test_fusion.py  test_knowledge.py  test_metrics.py  test_predict_image.py  test_retrieval.py  test_splits.py  test_stage_profiles.py  test_statistics.py
(+28 files in other folders)
