[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cropstate-research"
version = "0.1.0"
description = "Image-driven rice growth-stage recognition and confidence-aware retrieval research code"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
